webroot/common/ui/css/contrail.controller.css
/* ... */
#servicePorts .contrail-editable-grid-table, #analyzer_rule_section .contrail-editable-grid-table{
    margin-left:15px;
    margin-right:15px;}
#share_list th:first-child, .contrail-editable-grid-table th:first-child {
    padding-left: 5px;
}
#security_group_edit_security_group .contrail-editable-grid-table{
    margin-top:5px;}
#interface #infServer{
    padding-left:15px;}
#analyzer_rule_section>label{
    padding-left:15px;
    padding-bottom:5px;
    font-size:13px;}
#configalarm_edit_alarm_rule #description .textarea-input-group{
    width:100%;}
#configalarm_edit_alarm_rule .collection-table .data-cell>div.row{margin:0px;}

.vn_key{
    font-weight:600;
}
.vn_seperator{
    padding-right:8px;}
.data-cell-mirroringOptions .form-label{
    text-align:left;
    padding-left:6px;}
.data-cell-QoS .form-label{
    text-align:left;
    padding-left:21px;}
.data-cell-mirroringOptions .form-element{
    padding-left:10px;}
 .data-cell-QoS .form-element{
     padding-left:8px;}
.data-cell-mirroringOptions .form-element .help-block{
    text-align:left;}
.data-cell-mirroringOptions{
    padding-bottom:0px;}

